--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ relative_permalinks: false
 # Setup
 title:            Hrishikesh P
 tagline:          'Game Developer'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:      'Student Game Developer'
 url:              http://hyde.getpoole.com
 baseurl:          /
 
