Added repo info in config

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ baseurl:          /
 
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Hrishikesh P'
+  url:            https://twitter.com/
 
 paginate:         5
 
@@ -27,5 +27,5 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/hrishikeshpramod/hrishikeshpramod.github.io
 
