--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ relative_permalinks: false
 title:            Hrishikesh P
 tagline:          'Game Developer'
 description:      'Student Game Developer'
-url:              
+url:              https://github.com/hrishikeshpramod/hrishikeshpramod.github.io
 baseurl:          /
 
 
