Cut intro and replaced dev with designer

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ relative_permalinks: false
 
 # Setup
 title:            Hrishikesh P
-tagline:          'Game Developer'
-description:      'Student Game Developer'
+tagline:          'Game Designer'
+description:      'Student Game Designer'
 url:              https://github.com/hrishikeshpramod/hrishikeshpramod.github.io
 baseurl:          /
 
